# query_llama2

./: ciclo16_secondtest.ipynb  ciclo20_firsttest.ipynb  main.py  pyproject.toml  query.py  starts.ipynb  util.py
