[tool.poetry]
name = "query-llama-core"
version = "0.1.0"
description = ""
authors = ["Lily Perera <lilycapetillo86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^1.5.0"
isort = "^5.12.0"
blue = "^0.9.1"
openpyxl = "^3.1.2"
numpy = "1.25"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
xlrd = "^2.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
